--- a/app/redes.html
+++ b/app/redes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="redes-style.css">
     <script src="https://kit.fontawesome.com/980c70e4c3.js" crossorigin="anonymous"></script>
     <title>Qui Internet? - Redes disponíveis</title>
 </head>
@@ -25,7 +25,7 @@
 
         <div class="networks">
             <ul class="networks__list">
-                <li class="networks__item">
+                <li class="networks__item" onclick="networkDetails()">
                     <div class="networks__item_title">
                         <span class="fa-solid fa-wifi"></span>
                         <span class="networks__item_title_content">3U_4M0_QU1X4D4</span>
@@ -142,6 +142,12 @@
             </button>
         </div>
     </div>
+
+    <script>
+        function networkDetails() {
+            window.location.href = "detalhes-rede.html";
+        }
+    </script>
 </body>
 
 </html>
