feat: add add networks page and favicons

--- a/app/detalhes-rede.html
+++ b/app/detalhes-rede.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="detalhes-rede-style.css">
     <script src="https://kit.fontawesome.com/980c70e4c3.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="../assets/bala.jpeg">
     <title>Detalhes da Rede - 3U_4M0_QU1X4D4</title>
 </head>
 
@@ -17,8 +18,8 @@
                 <h1 class="container__title">Detalhes da Rede</h1>
                 <h6 class="container__subtitle">Informações sobre a rede selecionada.</h6>
             </div>
-        </div>  
-        
+        </div>
+
         <div class="network">
             <div class="network__info">
                 <div class="network__info__title">
@@ -58,7 +59,9 @@
                 </div>
                 <button class="network__info__connect_btn">Conectar</button>
             </div>
-            <iframe class="network__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.816912711012!2d-39.01593111546554!3d-4.970078477735979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7be9fbf5a44d5df%3A0xd982911389dba3bf!2sPra%C3%A7a%20Coronel%20Nanan!5e0!3m2!1spt-BR!2sbr!4v1740081496097!5m2!1spt-BR!2sbr"allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe class="network__map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3974.816912711012!2d-39.01593111546554!3d-4.970078477735979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7be9fbf5a44d5df%3A0xd982911389dba3bf!2sPra%C3%A7a%20Coronel%20Nanan!5e0!3m2!1spt-BR!2sbr!4v1740081496097!5m2!1spt-BR!2sbr"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
