--- a/app/perfil.html
+++ b/app/perfil.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="perfil-style.css">
-        <script src="https://kit.fontawesome.com/980c70e4c3.js" crossorigin="anonymous"></script>
-        <title>Perfil</title>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="perfil-style.css">
+    <script src="https://kit.fontawesome.com/980c70e4c3.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="../assets/bala.jpeg">
+    <title>Perfil</title>
+</head>
+
 <body>
     <div class="container">
         <div class="container__top">
@@ -15,8 +18,8 @@
                 <h1 class="container__title">Perfil</h1>
                 <h6 class="container__subtitle">Informações do Usuário</h6>
             </div>
-        </div>  
-        
+        </div>
+
     </div>
     <div class="profile">
         <div class="inputs">
@@ -40,15 +43,15 @@
         </div>
     </div>
     <script>
-        document.getElementById("profilePic").addEventListener("click", function() {
+        document.getElementById("profilePic").addEventListener("click", function () {
             document.getElementById("fileInput").click();
         });
 
-        document.getElementById("fileInput").addEventListener("change", function(event) {
+        document.getElementById("fileInput").addEventListener("change", function (event) {
             const file = event.target.files[0];
             if (file) {
                 const reader = new FileReader();
-                reader.onload = function(e) {
+                reader.onload = function (e) {
                     document.getElementById("profilePic").src = e.target.result;
                 }
                 reader.readAsDataURL(file);
@@ -60,4 +63,5 @@
         }
     </script>
 </body>
+
 </html>
