--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Qui internet</title>
+    <link rel="icon" type="image/png" href="../assets/bala.jpeg">
+    <script src="https://kit.fontawesome.com/980c70e4c3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index-style.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="logo">Qui internet</div>
+            <ul>
+                <li><a href="./app/redes.html">Redes</a></li>
+                <li><a href="./app/perfil.html">Perfil</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section class="slogan">
+            <h1>Compartilhe e Encontre Redes Wi-Fi</h1>
+            <p>Conecte-se facilmente a redes Wi-Fi em qualquer lugar!</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Qui internet. Todos os direitos reservados.</p>
+    </footer>
 </body>
 
 </html>
