--- a/app/detalhes-rede.html
+++ b/app/detalhes-rede.html
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="logo">Qui Internet?</div>
+            <ul>
+                <li><a href="redes.html">Redes</a></li>
+                <li><a href="perfil.html">Perfil</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container">
         <div class="container__top">
             <span class="fa-solid fa-arrow-left" onclick="goBack()" style="cursor:pointer;"></span>
@@ -64,6 +73,9 @@
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2025 Qui Internet?. Todos os direitos reservados.</p>
+    </footer>
 
     <script>
         function goBack() {
