--- a/app/redes.html
+++ b/app/redes.html
@@ -11,9 +11,17 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <div class="logo">Qui Internet?</div>
+            <ul>
+                <li><a href="redes.html">Redes</a></li>
+                <li><a href="perfil.html">Perfil</a></li>
+            </ul>
+        </nav>
+    </header>
     <div class="container">
         <div class="container__top">
-            <span class="fa-solid fa-arrow-left" onclick="goBack()"></span>
             <div class="container__top_content">
                 <h1 class="container__title">Redes disponíveis</h1>
                 <h6 class="container__subtitle">Clique em uma das opções abaixo para ler mais sobre.</h6>
@@ -143,6 +151,9 @@
             </button>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2025 Qui Internet?. Todos os direitos reservados.</p>
+    </footer>
 
     <script>
         function networkDetails() {
