--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qui internet</title>
+    <title>Qui Internet?</title>
     <link rel="icon" type="image/png" href="../assets/bala.jpeg">
     <script src="https://kit.fontawesome.com/980c70e4c3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index-style.css">
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Qui internet</div>
+            <div class="logo">Qui Internet?</div>
             <ul>
                 <li><a href="./app/redes.html">Redes</a></li>
                 <li><a href="./app/perfil.html">Perfil</a></li>
@@ -25,11 +25,12 @@
         <section class="slogan">
             <h1>Compartilhe e Encontre Redes Wi-Fi</h1>
             <p>Conecte-se facilmente a redes Wi-Fi em qualquer lugar!</p>
+            <img src="assets/person.svg" alt="Pessoa utilizando o computador" width="300px">
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Qui internet. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Qui Internet?. Todos os direitos reservados.</p>
     </footer>
 </body>
 
